@@ -1,6 +1,6 @@
 <?php
 
-class First extends Application {
+class Welcome extends Application {
 
 	function __construct()
 	{
@@ -12,7 +12,7 @@ class First extends Application {
 	{
                 $this->data['pagebody'] = 'justone';
             
-                $record = $this->quotes->first();
+                $record = $this->quotes->last();
                 $this->data['who'] = $record['who'];
                 $this->data['mug'] = $record['mug'];
                 $this->data['what'] = $record['what'];
